tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause4.ts (2 errors) ====
    class C extends A implements {
                      ~~~~~~~~~~
!!! error TS1097: 'implements' list cannot be empty.
                    ~
!!! error TS2304: Cannot find name 'A'.
    }